--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <hr>
         <div class="logo wrapper">
             <div class="logo_info">
-                <img src="/icons/fort1.svg" alt="logo">
+                <img src="icons/fort1.svg" alt="logo">
                 <div class="logo_name">
                     <p>Родове сімейне ремесло</p>
                     <h1 class="logo_coursive">Кам'янецька кузня</h1>
@@ -91,12 +91,12 @@
                         <span>499 <sup>грн</sup></span>
                     </div>
                     <div class="flowers_example">
-                        <img src="/images/flowers.png" alt="iron_flowers">
+                        <img src="images/flowers.png" alt="iron_flowers">
                     </div>
                 </div>
                 <hr>
                 <div class="hide">
-                    <img src="/images/flowers.png" alt="iron_flowers">
+                    <img src="images/flowers.png" alt="iron_flowers">
                 </div>
                 <hr class="hide">
             </section>
@@ -120,25 +120,25 @@
                 <div class="price_holder">
                     <figure>
                         <figcaption class="price_products">
-                            <img src="/images/gate.png" alt="acsessuary_gate">
+                            <img src="images/gate.png" alt="acsessuary_gate">
                             <p class="hide">Брами від 20 000 грн</p>
                         </figcaption>
                     </figure>
                     <figure>
                         <figcaption class="price_products">
-                            <img src="/images/fireplace.png" alt="acsessuary_fireplase">
+                            <img src="images/fireplace.png" alt="acsessuary_fireplase">
                             <p class="hide">Каміни від 5 000 грн</p>
                         </figcaption>
                     </figure>
                     <figure>
                         <figcaption class="price_products">
-                            <img src="/images/garden.png" alt="acsessuary_garden">
+                            <img src="images/garden.png" alt="acsessuary_garden">
                             <p class="hide">Бесідки від 10 000 грн</p>
                         </figcaption>
                     </figure>
                     <figure>
                         <figcaption class="price_products">
-                            <img src="/images/bycicle.png" alt="acsessuary_bycicle">
+                            <img src="images/bycicle.png" alt="acsessuary_bycicle">
                             <p class="hide">Декор від 1 000 грн</p>
                         </figcaption>
                     </figure>
@@ -160,12 +160,12 @@
                             творчість наших майстрів.</p>
                     </div>
                     <div class="price_products">
-                        <img src="/images/fire.png" alt="about_us">
+                        <img src="images/fire.png" alt="about_us">
                     </div>
                 </div>
             </article>
             <div class="price_products hide">
-                <img src="/images/fire.png" alt="about_us">
+                <img src="images/fire.png" alt="about_us">
             </div>
         </section>
     </main>
